--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1812,107 +1812,107 @@ stories:
   domain: http://www.vt-world.com/
   link: https://www.vt-world.com/health-heroes-from-northfield-middle-high-school.html
 images:
+- name: oldhouse-granaryfield-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-electricity.jpg
+- name: old-house-oldhouse-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-far-away.jpg
+- name: liberty-back-statue-liberty-back-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-marcel-duchamp.jpg
+- name: aws-s3-square-97-193-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-97-193-800-500-0-max-0-1--1.jpg
+- name: braceros-domingo-ulloa-downtown-sidewalk-washington.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-downtown-sidewalk-washington.jpg
+- name: oldhouse-oldhouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-hot-spicy.jpg
+- name: crow_cinnamon_rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_cinnamon_rolls.jpg
+- name: ellis-island-ellis-island-room-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-ww2-color.jpg
+- name: oldsmallboat-oldsmallboat-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-marcel-duchamp.jpg
+- name: stalin-time-old-building-barcelona-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-building-barcelona-waterfront.jpg
+- name: ellis-island-ellis-island-room-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-colorful-dream.jpg
+- name: blossombar-spagetti-accident-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-spagetti-accident-file-00-00-50-62.jpg
+- name: windowmountain-window-mountain-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-yellow-collage.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-constitution.jpg
+- name: gypsy-wagon-gypsywagon-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dali-two.jpg
+- name: hollywood-building-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-jap-wav-pr.jpg
+- name: crow-crow.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-kand-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-kand-two.JPG
+- name: store-on-corner-oldcabin-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-graham-sutherland.jpg
+- name: liberty-back-statue-liberty-back-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-alien-goggles.jpg
+- name: beach-rocks-beach-rocks-currents-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-graham-sutherland.jpg
+- name: supreme-court-supremecourt-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-purp-paper.jpg
+- name: flower-barbed-wire-flower-barbed-wire-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-kandinsky-bv.jpg
+- name: beach-rocks-beach-rocks-currents-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-colored-circuits.jpg
+- name: oldroad-old-road-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-internet-numbers.jpg
+- name: old-building-clouds-with-tree-nazi-invasion.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-building-clouds-with-tree-nazi-invasion.jpg
+- name: locked-up-steam-lock-up-steam-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-5.jpg
+- name: oldtrain-oldtrain-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-cinnamon-rolls.jpg
+- name: oldhouse-oldhouse-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-oily-mcoilface.jpg
+- name: art-museum-art-museum-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-pablo-blue.jpg
+- name: castle-wall-DSC-0067-internet-numbers.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-internet-numbers.JPG
+- name: old-church-oldchurch-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-mucha-mult.jpg
+- name: old-cabin-oldcabin-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-colorful-dream.jpg
+- name: stories-G0520270-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-G0520270-blue-circuit.jpg
+- name: hollywood-building-hollywood-building-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-clean-view.jpg
+- name: stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
+- name: oldhouse-oldhouse-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-alberto-giacometti.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-horiz-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-horiz-circuit.JPG
+- name: berlinwall-DSC-0084-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crabapple.jpg
+- name: stories-death-valley-national-park-dali-three-just-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-death-valley-national-park-dali-three-just-road.jpg
+- name: cyber-api-description-wars-img-3820-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-img-3820-dark-dali.jpg
 - name: aws-s3-stories-server-racks-clouds-dark-dali.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-racks-clouds-dark-dali.jpg
-- name: berlinwall2-berlinwall-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-granite.jpg
-- name: server-cloud-server-racks-door-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-yellow-paper.jpg
-- name: stalin-time-seatlle-shipping-mountain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-seatlle-shipping-mountain.jpg
-- name: powerlines-power-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-really-hot.jpg
-- name: border-crossing-bordercrossing-crabapple.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-crabapple.png
-- name: cargo-ship-cargo-ship-on-sea-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dry-skin.jpg
-- name: cargo-ship-cargo-ship-on-sea-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-circuit-3.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
-- name: braceros-domingo-ulloa-san-francisco-skyline.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-san-francisco-skyline.jpg
-- name: fence-fence-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-purple-pond.jpg
-- name: eduardo-eduardo-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dali-two.jpg
-- name: abandonedbuildings_monet_one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_monet_one.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-blue-granite.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-granite.png
-- name: oldcabin-store-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-nazi-poster.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-kand-two.jpg
-- name: legal-statue-legalstatue-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-ww2-dresden.jpg
-- name: trucksilo-trucksilo-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-satan-red.jpg
-- name: white-house-lawn-white-house-lawn-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-diego-rivera1.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-graham-sutherland.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-graham-sutherland.png
-- name: copper-circuit-downtown-125thstreet.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-125thstreet.jpg
-- name: nazi-invasion-white-house-press-room-flag.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-press-room-flag.jpg
-- name: gypsymosaic-gypsy-eyes-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-alberto-giacometti.jpg
-- name: docks-docks-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-smoking-cigarette.jpg
-- name: downtheline-downtheline-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-gred-mash.jpg
-- name: old-granary-field-oldhouse-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-emily-carr.jpg
-- name: catacombs-catacombs-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-ww2-color.jpg
-- name: old-gas-pumps-oldgaspumps-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dali-two.jpg
-- name: oldroad-old-road-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-gred-mash.jpg
-- name: copper-circuit-shipping-docs-cranes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-shipping-docs-cranes.jpg
-- name: nazi-invasion-white-house-lawn-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-lawn-view.jpg
-- name: la-muse-nyc-streets-laundromat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-nyc-streets-laundromat.jpg
-- name: oldhousecars-house-old-cars-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-emily-carr.jpg
-- name: stories-35910978054-906047b6cb-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-35910978054-906047b6cb-z.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
-- name: blossombar-sand-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sand-paper-file-00-00-00-00.jpg
-- name: windowmountain-window-mountain-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-constitution.jpg
-- name: copper-circuit-downtown-street-crosswalk.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-street-crosswalk.jpg
-- name: downtheline-downtheline-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purple-pond.jpg
-- name: nazi-invasion-crow-stailess-steal.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-crow-stailess-steal.jpg
-- name: wind-mills-windmills-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-constitution.jpg
-- name: old-house-oldhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-brush.jpg
-- name: server-cloud-server-racks-door-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-deep-connections.jpg
-- name: old-church-oldchurch-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-kand-two.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
-- name: white-house-whitehouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-ww2-dresden.jpg
-- name: aws-s3-square-C2zqzsfVIAA2hcM.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2zqzsfVIAA2hcM.jpg
-- name: nazi-invasion-dragon-turning-head.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dragon-turning-head.jpg
-- name: death-valley-death-valley-national-park-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-alberto-giacometti.jpg
-- name: old-cabin-oldcabin-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-colored-circuits.jpg
-- name: ellis-island-ellis-island-room-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-cinnamon-rolls.jpg
+- name: border-crossing-bordercrossing-creativity.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-creativity.png
+- name: gypsy-wagon-gypsywagon-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-ww2-dresden.jpg
+- name: walled-garden-walled-garden-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-marcel-duchamp.jpg
+- name: beach-clouds-lifeguard-beachclouds-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-umberto-bocc.jpg
+- name: adam-smith-adam-smith-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-really-hot.jpg
+- name: old-cabin-oldcabin-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-satan-red.jpg
+- name: stalin-time-destruction-seattle-viaduct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-destruction-seattle-viaduct.jpg
+- name: christianity-christianity-under-construction-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-light-dali.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit-5.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit-5.png
 ---
 Soldier's Homecoming Surprises Little Sister.&nbsp;Reward Offered After Dog Fatally Stabbed.&nbsp;DeBoer Says Plan Is To Call Gator Bowl For Hoosiers.&nbsp;Low Cost Vaccine Clinic Being Held In Rochelle.&nbsp;House And Senate Leaders Tussle Over Trump Impeachment Trial.&nbsp;Dak Prescott Says He'll Be Good To Go Sunday.&nbsp;Cardinals Escape With Victory Over Waves.&nbsp;Sofia Richie Wants To Be Liked By The Kardashian Family.&nbsp;
